# insight-hub

./: .replit  SISTEMA_ORIENTACOES.md  app.py  debug_csv.py  invalid_csv_missing_fields.csv  pyproject.toml  replit.md  sample_fleet_data.csv  step_by_step_migration.py  test_csv_reading.py  test_migration.py  verify_dashboard_data.py
.streamlit/: config.toml
attached_assets/: Pasted--Plano-Detalhado-do-Projeto-Insight-Hub-Vis-o-Geral-do-Sistema-O-Insight-Hub-uma--1757813439488_1757813439489.txt  relatorio_historico_de_posicoes-scp-6e34_05-09-2025_06_46_1757818811438.csv  relatorio_historico_de_posicoes-tfe-6d41_05-09-2025_06_47_1757818811439.csv  relatorio_historico_de_posicoes-tfk-9j63_05-09-2025_06_48_1757818811432.csv  relatorio_historico_de_posicoes-tfn-5d23_05-09-2025_06_49_1757818811433.csv  relatorio_historico_de_posicoes-tfp-8h93_05-09-2025_06_53_1757818811435.csv  relatorio_historico_de_posicoes-tfw-5e13_05-09-2025_06_54_1757818811436.csv  relatorio_historico_de_posicoes-tgb-4f03_05-09-2025_06_55_1757818811436.csv  relatorio_historico_de_posicoes-tgf-3d93_05-09-2025_06_55_1757818811437.csv
data/: .gitkeep  backup_20250914_015555.csv  backup_20250914_021925.csv  processed_data.csv  processing_history.csv
database/: connection.py  db_manager.py  init_db.py  models.py  services.py
pages/: 1_📊_Dashboard.py  2_📁_Upload_CSV.py  3_🔍_Análise_Detalhada.py  4_📈_Comparação_Veículos.py  4_🔮_Manutenção_Preditiva.py  5_🗺️_Mapa_de_Rotas.py  5_🚨_Alertas.py  5_🧠_Insights_Automáticos.py  6_📄_Relatórios.py  8_🚨_Controle_Operacional.py
utils/: alert_system.py  (+8 more)
(+2 files in other folders)
