[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.8.4",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.3",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "streamlit-folium>=0.25.1",
    "streamlit>=1.49.1",
    "folium>=0.20.0",
]
